# Let-s-Fire-Up

1st project/: pyproject.toml
1st project/Project/Project/: settings.py  urls.py
1st project/Project/collect/: urls.py  views.py
1st project/Project/collect/main/: Worker.py
1st project/Project/templates/collect/: index.html
1st project/Project/templates/partials/: base.html
1st project/Project/templates/result/: index.html
1st project/Project/templates/user/: index.html
1st project/Project/user/: admin.py  forms.py  models.py  urls.py  views.py
1st project/Project/user/migrations/: 0001_initial.py
