[tool.poetry]
name = "1st Project"
version = "0.1.0"
description = ""
authors = ["Saif Zidan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
django = "^5.0.4"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
crispy-bootstrap5 = "^2024.2"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
